--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,17 @@ serde_json = "*"
 serde = "*"
 serde_derive = "*"
 find_folder = "*"
-native-windows-gui = "0.2.0"
 nalgebra = "*"
 
 ggez = "*"
 image = "*"
 
+[target.'cfg(windows)'.dependencies]
+native-windows-gui = "0.2.0"
+
+[target.'cfg(unix)'.dependencies]
+gtk = {version = "0.2.0", features = ["v3_16"] }
+
 [features]
 cargo-resource-root = []
+
